alteraçao do nome no pom

--- a/fiveware-test-model/pom.xml
+++ b/fiveware-test-model/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>fiveware-test-model</artifactId>
-	<name>Fiveware Model Module</name>
+	<name>Fiveware Model Layer</name>
 	<packaging>jar</packaging>
 
 	<dependencies>
