--- a/fiveware-test-model/pom.xml
+++ b/fiveware-test-model/pom.xml
@@ -11,6 +11,7 @@
 	</parent>
 
 	<artifactId>fiveware-test-model</artifactId>
+	<version>0.1-SNAPSHOT</version>
 	<name>Fiveware Model Layer</name>
 	<packaging>jar</packaging>
 
