--- a/fiveware-test-model/pom.xml
+++ b/fiveware-test-model/pom.xml
@@ -49,11 +49,16 @@
 			<version>5.1.26</version>
 		</dependency>
 
-		<!-- Apache -->
+		<!-- Jackson -->
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.4</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.6.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.6.5</version>
 		</dependency>
 
 	</dependencies>
